--- a/uuu-s/uuu-s.vcxproj
+++ b/uuu-s/uuu-s.vcxproj
@@ -124,6 +124,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SystemFunctions.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SystemFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
