--- a/uuu-s/uuu-s.vcxproj.filters
+++ b/uuu-s/uuu-s.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Text.txt">
+      <Filter>リソース ファイル</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
